--- a/main/templates/main/earth_page.html
+++ b/main/templates/main/earth_page.html
@@ -37,7 +37,7 @@
                 <a href="{% url 'fire_page' %}" class="person_link c">
                     <img src="{% static 'main/images/person_page/fire_person.png' %}" alt="">
                 </a>
-                <img src="{% static 'main/images/person_page/main_element.svg' %}" alt="" class="main_element">
+                <img src="{% static 'main/images/person_page/main_element.svg' %}" alt="" class="main_element earth">
             </div>
     
             <div class="description">
