--- a/main/templates/main/water_page.html
+++ b/main/templates/main/water_page.html
@@ -32,7 +32,7 @@
                 <img src="{% static 'main/images/person_page/fire_person.png' %}" alt="">
             </a>
             <div class="person_link b active">
-                <img src="{% static 'main/images/person_page/water_person_active.svg' %}" alt="">
+                <img src="{% static 'main/images/person_page/water_person_active.png' %}" alt="">
             </div>
             <a href="{% url 'earth_page' %}" class="person_link d">
                 <img src="{% static 'main/images/person_page/earth_person.png' %}" alt="">
