--- a/main/static/main/style.css
+++ b/main/static/main/style.css
@@ -247,6 +247,7 @@ img {
   margin-bottom: 15px;
   color: var(--white);
   text-align: center;
+  transition: opacity 0.5s;
 }
 .chat_modal .body .tabs {
   height: 41px;
@@ -340,6 +341,28 @@ img {
 }
 .chat_modal .body .tab_content .form.active {
   display: flex;
+}
+.chat_modal .success_message {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+  display: none;
+  opacity: 0;
+  animation: Open 0.7s forwards;
+  animation-delay: 0.5s;
+  z-index: 1;
+}
+.chat_modal .success_message.active {
+  display: flex;
+}
+.chat_modal .success_message h4 {
+  max-width: 120px;
 }
 .chat_modal .button_block {
   text-align: center;
