--- a/main/static/main/home/home.scss
+++ b/main/static/main/home/home.scss
@@ -259,6 +259,7 @@
         }
     
         & span.decor {
+            display: block;
             position: relative;
             width: max-content;
             font-weight: 400;
