--- a/main/static/main/home/home.css
+++ b/main/static/main/home/home.css
@@ -268,6 +268,7 @@
   }
 }
 .slider_container .container span.decor {
+  display: block;
   position: relative;
   width: -moz-max-content;
   width: max-content;
