--- a/main/static/main/home/home.css
+++ b/main/static/main/home/home.css
@@ -368,58 +368,27 @@
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: 140px 187px 222px 133px;
-  grid-template-areas: "a a b b b b c c c c c c" "a a d d d d e e e e f f" "g g g h h h i i i i f f" "j j j j j j k k k k k k";
+  grid-template-areas: "s1 s1 s2 s2 s2 s2 s3 s3 s3 s3 s3 s3" "s1 s1 s4 s4 s4 s4 e e e e s6 s6" "g g g s8 s8 s8 s9 s9 s9 s9 s6 s6" "s10 s10 s10 s10 s10 s10 s11 s11 s11 s11 s11 s11";
   gap: 40px;
   overflow: hidden;
 }
 @media screen and (max-width: 991px) {
   .scenaries {
-    grid-template-areas: "f f f a a a e e e e e e" "f f f a a a i i i i i i" "g g g g g g d d d d d d" "c c c c c c b b b b b b" "k k k k k k k k h h h h" "j j j j j j j j l l l l";
+    grid-template-areas: "s6 s6 s6 s1 s1 s1 e e e e e e" "s6 s6 s6 s1 s1 s1 s9 s9 s9 s9 s9 s9" "g g g g g g s4 s4 s4 s4 s4 s4" "s3 s3 s3 s3 s3 s3 s2 s2 s2 s2 s2 s2" "s11 s11 s11 s11 s11 s11 s11 s11 s8 s8 s8 s8" "s10 s10 s10 s10 s10 s10 s10 s10 l l l l";
     grid-template-rows: 185px 202px 202px 140px 133px 133px;
   }
-}
-.scenaries > *:nth-child(1) {
-  grid-area: a;
-}
-.scenaries > *:nth-child(2) {
-  grid-area: b;
-}
-.scenaries > *:nth-child(3) {
-  grid-area: c;
-}
-.scenaries > *:nth-child(4) {
-  grid-area: d;
-}
-.scenaries > *:nth-child(5) {
-  grid-area: e;
-}
-.scenaries > *:nth-child(6) {
-  grid-area: f;
-}
-.scenaries > *:nth-child(7) {
-  grid-area: g;
-}
-.scenaries > *:nth-child(8) {
-  grid-area: h;
-}
-.scenaries > *:nth-child(9) {
-  grid-area: i;
-}
-.scenaries > *:nth-child(10) {
-  grid-area: j;
-}
-.scenaries > *:nth-child(11) {
-  grid-area: k;
 }
 .scenaries .scenaries_item {
   position: relative;
   border-radius: 16px;
   font-size: 16px;
+  transition: 0.8s;
 }
-.scenaries .scenaries_item.l {
-  grid-area: l;
-  display: none;
-  overflow: hidden;
+.scenaries .scenaries_item.main {
+  opacity: 1;
+}
+.scenaries .scenaries_item.secondary {
+  opacity: 0;
 }
 @media screen and (max-width: 768px) {
   .scenaries .scenaries_item {
@@ -427,6 +396,7 @@
   }
 }
 .scenaries .scenaries_item.e {
+  grid-area: e;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -442,6 +412,7 @@
   font-weight: 600;
 }
 .scenaries .scenaries_item.g {
+  grid-area: g;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -481,8 +452,11 @@
   background-color: var(--white);
   overflow: hidden;
 }
-.scenaries .scenaries_item .label svg {
+.scenaries .scenaries_item .label img {
   min-width: 20px;
+}
+.scenaries .scenaries_item .label h4 {
+  text-transform: lowercase;
 }
 @media screen and (max-width: 768px) {
   .scenaries .scenaries_item .label {
@@ -536,365 +510,392 @@
     z-index: 10;
   }
 }
-.scenaries .scenaries_item.a .label {
+.scenaries .scenaries_item.s1 {
+  grid-area: s1;
+}
+.scenaries .scenaries_item.s1 .label {
   top: 88px;
   left: 0;
   transition: 0.2s cubic-bezier(0.48, -1.68, 0.55, 1.9);
 }
-.scenaries .scenaries_item.a .description {
+.scenaries .scenaries_item.s1 .description {
   background-image: url("./../images/fire_back.svg");
   background-position: left bottom;
   background-repeat: no-repeat;
 }
 @media screen and (max-width: 991px) {
-  .scenaries .scenaries_item.a .description {
+  .scenaries .scenaries_item.s1 .description {
     height: 367px;
   }
 }
-.scenaries .scenaries_item.a .description p {
+.scenaries .scenaries_item.s1 .description p {
   -webkit-line-clamp: 16;
   line-clamp: 16;
 }
 @media screen and (min-width: 992px) {
-  .scenaries .scenaries_item.a:hover .label {
+  .scenaries .scenaries_item.s1:hover .label {
     transform: translateX(10%);
     top: 70px;
   }
 }
 @media screen and (max-width: 991px) {
-  .scenaries .scenaries_item.a.active .label {
+  .scenaries .scenaries_item.s1.active .label {
     transform: translateX(10%);
     top: 70px;
   }
 }
-.scenaries .scenaries_item.b .label {
+.scenaries .scenaries_item.s2 {
+  grid-area: s2;
+}
+.scenaries .scenaries_item.s2 .label {
   top: 0px;
   left: 30%;
   transition: 0.3s cubic-bezier(0.56, -0.64, 0.42, 1.5);
 }
-.scenaries .scenaries_item.b .description {
+.scenaries .scenaries_item.s2 .description {
   background-image: url("./../images/water_back.svg");
   background-position: right top;
   background-repeat: no-repeat;
 }
-.scenaries .scenaries_item.b .description .title_block {
+.scenaries .scenaries_item.s2 .description .title_block {
   position: relative;
   left: 30%;
   transition: 0.2s cubic-bezier(0.56, -0.64, 0.42, 1.5);
   transition-delay: 0.1s;
 }
-.scenaries .scenaries_item.b .description p {
+.scenaries .scenaries_item.s2 .description p {
   -webkit-line-clamp: 4;
   line-clamp: 4;
 }
 @media screen and (min-width: 992px) {
-  .scenaries .scenaries_item.b .description:hover .title_block {
+  .scenaries .scenaries_item.s2 .description:hover .title_block {
     left: 0;
   }
 }
 @media screen and (min-width: 992px) {
-  .scenaries .scenaries_item.b:hover .label {
+  .scenaries .scenaries_item.s2:hover .label {
     left: 30px;
   }
 }
 @media screen and (max-width: 991px) {
-  .scenaries .scenaries_item.b.active .label {
+  .scenaries .scenaries_item.s2.active .label {
     left: 30px;
   }
-  .scenaries .scenaries_item.b.active .description .title_block {
+  .scenaries .scenaries_item.s2.active .description .title_block {
     left: 0;
   }
 }
-.scenaries .scenaries_item.c .label {
+.scenaries .scenaries_item.s3 {
+  grid-area: s3;
+}
+.scenaries .scenaries_item.s3 .label {
   top: 50%;
   left: 30%;
   transition: 0.3s cubic-bezier(0.56, -0.64, 0.42, 1.5);
   transform: translateY(-50%);
 }
 @media screen and (max-width: 991px) {
-  .scenaries .scenaries_item.c .label {
+  .scenaries .scenaries_item.s3 .label {
     left: 54%;
   }
 }
-.scenaries .scenaries_item.c .description {
+.scenaries .scenaries_item.s3 .description {
   background-image: url("./../images/air_back.svg");
   background-position: right bottom;
   background-repeat: no-repeat;
 }
 @media screen and (max-width: 991px) {
-  .scenaries .scenaries_item.c .description {
+  .scenaries .scenaries_item.s3 .description {
     width: 70dvw;
   }
 }
-.scenaries .scenaries_item.c .description .title_block {
+.scenaries .scenaries_item.s3 .description .title_block {
   position: relative;
   top: 20%;
   left: 20%;
   transition: 0.2s cubic-bezier(0.56, -0.64, 0.42, 1.5);
   transition-delay: 0s;
 }
-.scenaries .scenaries_item.c .description p {
+.scenaries .scenaries_item.s3 .description p {
   -webkit-line-clamp: 4;
   line-clamp: 4;
 }
 @media screen and (min-width: 992px) {
-  .scenaries .scenaries_item.c .description:hover .title_block {
+  .scenaries .scenaries_item.s3 .description:hover .title_block {
     transition-delay: 0.1s;
     top: 0;
     left: 0;
   }
 }
 @media screen and (min-width: 992px) {
-  .scenaries .scenaries_item.c:hover .label {
+  .scenaries .scenaries_item.s3:hover .label {
     top: 30%;
     left: 10%;
   }
 }
 @media screen and (max-width: 991px) {
-  .scenaries .scenaries_item.c.active .label {
+  .scenaries .scenaries_item.s3.active .label {
     top: 30%;
     left: 10%;
   }
-  .scenaries .scenaries_item.c.active .description .title_block {
+  .scenaries .scenaries_item.s3.active .description .title_block {
     transition-delay: 0.1s;
     top: 0;
     left: 0;
   }
 }
-.scenaries .scenaries_item.d .label {
+.scenaries .scenaries_item.s4 {
+  grid-area: s4;
+}
+.scenaries .scenaries_item.s4 .label {
   top: 0%;
   left: 0;
 }
-.scenaries .scenaries_item.d .description {
+.scenaries .scenaries_item.s4 .description {
   background-image: url("./../images/mount_back.svg");
   background-position: left bottom;
   background-repeat: no-repeat;
 }
-.scenaries .scenaries_item.d .description p {
+.scenaries .scenaries_item.s4 .description p {
   -webkit-line-clamp: 6;
   line-clamp: 6;
 }
-.scenaries .scenaries_item.f .label {
+.scenaries .scenaries_item.s6 {
+  grid-area: s6;
+}
+.scenaries .scenaries_item.s6 .label {
   top: 50%;
   transform: translateY(-50%);
   left: 0;
   transition: 0.3s cubic-bezier(0.48, -1.68, 0.55, 1.9);
 }
-.scenaries .scenaries_item.f .description {
+.scenaries .scenaries_item.s6 .description {
   background-image: url("./../images/mount_back.svg");
   background-position: left bottom;
   background-repeat: no-repeat;
 }
-.scenaries .scenaries_item.f .description .title_block {
+.scenaries .scenaries_item.s6 .description .title_block {
   position: relative;
   top: 40px;
   left: 0;
   transition: 0.3s cubic-bezier(0.56, -0.64, 0.42, 1.5);
 }
-.scenaries .scenaries_item.f .description p {
+.scenaries .scenaries_item.s6 .description p {
   -webkit-line-clamp: 18;
   line-clamp: 18;
 }
 @media screen and (min-width: 992px) {
-  .scenaries .scenaries_item.f .description:hover .title_block {
+  .scenaries .scenaries_item.s6 .description:hover .title_block {
     top: 0;
   }
 }
 @media screen and (min-width: 992px) {
-  .scenaries .scenaries_item.f:hover .label {
+  .scenaries .scenaries_item.s6:hover .label {
     top: 20%;
   }
 }
 @media screen and (max-width: 991px) {
-  .scenaries .scenaries_item.f.active .label {
+  .scenaries .scenaries_item.s6.active .label {
     top: 20%;
   }
-  .scenaries .scenaries_item.f.active .description .title_block {
+  .scenaries .scenaries_item.s6.active .description .title_block {
     top: 0;
   }
 }
-.scenaries .scenaries_item.h .label {
+.scenaries .scenaries_item.s8 {
+  grid-area: s8;
+}
+.scenaries .scenaries_item.s8 .label {
   top: 0px;
   left: 40%;
   transition: 0.3s cubic-bezier(0.56, -0.64, 0.42, 1.5);
 }
-.scenaries .scenaries_item.h .description {
+.scenaries .scenaries_item.s8 .description {
   background-image: url("./../images/water_back.svg");
   background-position: right bottom;
   background-repeat: no-repeat;
 }
 @media screen and (max-width: 991px) {
-  .scenaries .scenaries_item.h .description {
+  .scenaries .scenaries_item.s8 .description {
     height: 202px;
   }
 }
-.scenaries .scenaries_item.h .description .title_block {
+.scenaries .scenaries_item.s8 .description .title_block {
   position: relative;
   top: -10px;
   left: 30%;
   transition: 0.2s cubic-bezier(0.56, -0.64, 0.42, 1.5);
   transition-delay: 0s;
 }
-.scenaries .scenaries_item.h .description p {
+.scenaries .scenaries_item.s8 .description p {
   -webkit-line-clamp: 7;
   line-clamp: 7;
 }
 @media screen and (min-width: 992px) {
-  .scenaries .scenaries_item.h .description:hover .title_block {
+  .scenaries .scenaries_item.s8 .description:hover .title_block {
     transition-delay: 0.1s;
     top: 2px;
     left: 0;
   }
 }
 @media screen and (min-width: 992px) {
-  .scenaries .scenaries_item.h:hover .label {
+  .scenaries .scenaries_item.s8:hover .label {
     left: 30px;
   }
 }
 @media screen and (max-width: 991px) {
-  .scenaries .scenaries_item.h.active .label {
+  .scenaries .scenaries_item.s8.active .label {
     left: 30px;
   }
-  .scenaries .scenaries_item.h.active .description .title_block {
+  .scenaries .scenaries_item.s8.active .description .title_block {
     transition-delay: 0.1s;
     top: 2px;
     left: 0;
   }
 }
-.scenaries .scenaries_item.i .label {
+.scenaries .scenaries_item.s9 {
+  grid-area: s9;
+}
+.scenaries .scenaries_item.s9 .label {
   top: 50%;
   left: 30%;
   transition: 0.3s cubic-bezier(0.56, -0.64, 0.42, 1.5);
   transform: translateY(-50%);
 }
-.scenaries .scenaries_item.i .description {
+.scenaries .scenaries_item.s9 .description {
   background-image: url("./../images/air_back.svg");
   background-position: right bottom;
   background-repeat: no-repeat;
 }
-.scenaries .scenaries_item.i .description .title_block {
+.scenaries .scenaries_item.s9 .description .title_block {
   position: relative;
   top: 20%;
   left: 20%;
   transition: 0.2s cubic-bezier(0.56, -0.64, 0.42, 1.5);
   transition-delay: 0s;
 }
-.scenaries .scenaries_item.i .description p {
+.scenaries .scenaries_item.s9 .description p {
   -webkit-line-clamp: 7;
   line-clamp: 7;
 }
 @media screen and (min-width: 992px) {
-  .scenaries .scenaries_item.i .description:hover .title_block {
+  .scenaries .scenaries_item.s9 .description:hover .title_block {
     transition-delay: 0.1s;
     top: 0;
     left: 0;
   }
 }
 @media screen and (min-width: 992px) {
-  .scenaries .scenaries_item.i:hover .label {
+  .scenaries .scenaries_item.s9:hover .label {
     top: 30%;
     left: 10%;
   }
 }
 @media screen and (max-width: 991px) {
-  .scenaries .scenaries_item.i.active .label {
+  .scenaries .scenaries_item.s9.active .label {
     top: 30%;
     left: 10%;
   }
-  .scenaries .scenaries_item.i.active .description .title_block {
+  .scenaries .scenaries_item.s9.active .description .title_block {
     transition-delay: 0.1s;
     top: 0;
     left: 0;
   }
 }
-.scenaries .scenaries_item.j .label {
+.scenaries .scenaries_item.s10 {
+  grid-area: s10;
+}
+.scenaries .scenaries_item.s10 .label {
   top: 0px;
   left: 20%;
   transition: 0.3s cubic-bezier(0.56, -0.64, 0.42, 1.5);
 }
-.scenaries .scenaries_item.j .description {
+.scenaries .scenaries_item.s10 .description {
   background-image: url("./../images/water_back.svg");
   background-position: right bottom;
   background-repeat: no-repeat;
 }
 @media screen and (max-width: 991px) {
-  .scenaries .scenaries_item.j .description {
+  .scenaries .scenaries_item.s10 .description {
     width: 70dvw;
   }
 }
-.scenaries .scenaries_item.j .description .title_block {
+.scenaries .scenaries_item.s10 .description .title_block {
   position: relative;
   left: 20%;
   transition: 0.2s cubic-bezier(0.56, -0.64, 0.42, 1.5);
   transition-delay: 0.1s;
 }
-.scenaries .scenaries_item.j .description p {
+.scenaries .scenaries_item.s10 .description p {
   -webkit-line-clamp: 4;
   line-clamp: 4;
 }
 @media screen and (min-width: 992px) {
-  .scenaries .scenaries_item.j .description:hover .title_block {
+  .scenaries .scenaries_item.s10 .description:hover .title_block {
     left: 0;
   }
 }
 @media screen and (min-width: 992px) {
-  .scenaries .scenaries_item.j:hover .label {
+  .scenaries .scenaries_item.s10:hover .label {
     left: 30px;
   }
 }
 @media screen and (max-width: 991px) {
-  .scenaries .scenaries_item.j.active .label {
+  .scenaries .scenaries_item.s10.active .label {
     left: 30px;
   }
-  .scenaries .scenaries_item.j.active .description .title_block {
+  .scenaries .scenaries_item.s10.active .description .title_block {
     left: 0;
   }
 }
-.scenaries .scenaries_item.k .label {
+.scenaries .scenaries_item.s11 {
+  grid-area: s11;
+}
+.scenaries .scenaries_item.s11 .label {
   top: 0px;
   left: 40%;
   transition: 0.3s cubic-bezier(0.56, -0.64, 0.42, 1.5);
 }
 @media screen and (max-width: 991px) {
-  .scenaries .scenaries_item.k .label {
+  .scenaries .scenaries_item.s11 .label {
     left: 48%;
   }
 }
-.scenaries .scenaries_item.k .description {
+.scenaries .scenaries_item.s11 .description {
   background-image: url("./../images/fire_back2.svg");
   background-position: right bottom;
   background-repeat: no-repeat;
 }
 @media screen and (max-width: 991px) {
-  .scenaries .scenaries_item.k .description {
+  .scenaries .scenaries_item.s11 .description {
     width: 70dvw;
   }
 }
-.scenaries .scenaries_item.k .description .title_block {
+.scenaries .scenaries_item.s11 .description .title_block {
   position: relative;
   left: 40%;
   transition: 0.2s cubic-bezier(0.56, -0.64, 0.42, 1.5);
   transition-delay: 0.1s;
 }
-.scenaries .scenaries_item.k .description p {
+.scenaries .scenaries_item.s11 .description p {
   -webkit-line-clamp: 4;
   line-clamp: 4;
 }
 @media screen and (min-width: 992px) {
-  .scenaries .scenaries_item.k .description:hover .title_block {
+  .scenaries .scenaries_item.s11 .description:hover .title_block {
     left: 0;
   }
 }
 @media screen and (min-width: 992px) {
-  .scenaries .scenaries_item.k:hover .label {
+  .scenaries .scenaries_item.s11:hover .label {
     left: 30px;
   }
 }
 @media screen and (max-width: 991px) {
-  .scenaries .scenaries_item.k.active .label {
+  .scenaries .scenaries_item.s11.active .label {
     left: 30px;
   }
-  .scenaries .scenaries_item.k.active .description .title_block {
+  .scenaries .scenaries_item.s11.active .description .title_block {
     left: 0;
   }
 }
@@ -902,7 +903,7 @@
   .scenaries {
     padding: 0px !important;
     grid-template-columns: 1fr;
-    grid-template-areas: "e" "a" "b" "c" "f" "d" "h" "i" "j" "k" "g";
+    grid-template-areas: "e" "s1" "s2" "s3" "s6" "s4" "s8" "i" "j" "m" "g";
     grid-auto-rows: auto;
     grid-template-rows: repeat(9, auto);
     gap: 0px;
