--- a/main/static/main/home/home.scss
+++ b/main/static/main/home/home.scss
@@ -362,79 +362,36 @@
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: 140px 187px 222px 133px;
     grid-template-areas: 
-        'a a b b b b c c c c c c'
-        'a a d d d d e e e e f f'
-        'g g g h h h i i i i f f'
-        'j j j j j j k k k k k k'
+        's1 s1 s2 s2 s2 s2 s3 s3 s3 s3 s3 s3'
+        's1 s1 s4 s4 s4 s4 e e e e s6 s6'
+        'g g g s8 s8 s8 s9 s9 s9 s9 s6 s6'
+        's10 s10 s10 s10 s10 s10 s11 s11 s11 s11 s11 s11'
     ;
     gap: 40px;
     overflow: hidden;
 
     @include common.mediaMaxWidth(991) {
         grid-template-areas: 
-            'f f f a a a e e e e e e'
-            'f f f a a a i i i i i i'
-            'g g g g g g d d d d d d'
-            'c c c c c c b b b b b b'
-            'k k k k k k k k h h h h'
-            'j j j j j j j j l l l l'
+            's6 s6 s6 s1 s1 s1 e e e e e e'
+            's6 s6 s6 s1 s1 s1 s9 s9 s9 s9 s9 s9'
+            'g g g g g g s4 s4 s4 s4 s4 s4'
+            's3 s3 s3 s3 s3 s3 s2 s2 s2 s2 s2 s2'
+            's11 s11 s11 s11 s11 s11 s11 s11 s8 s8 s8 s8'
+            's10 s10 s10 s10 s10 s10 s10 s10 l l l l'
         ;
         grid-template-rows: 185px 202px 202px 140px 133px 133px;
-    }
-
-    & > *:nth-child(1) {
-        grid-area: a;
-    }
-
-    & > *:nth-child(2) {
-        grid-area: b;
-    }
-
-    & > *:nth-child(3) {
-        grid-area: c;
-    }
-
-    & > *:nth-child(4) {
-        grid-area: d;
-    }
-
-    & > *:nth-child(5) {
-        grid-area: e;
-    }
-
-    & > *:nth-child(6) {
-        grid-area: f;
-    }
-
-    & > *:nth-child(7) {
-        grid-area: g;
-    }
-
-    & > *:nth-child(8) {
-        grid-area: h;
-    }
-
-    & > *:nth-child(9) {
-        grid-area: i;
-    }
-
-    & > *:nth-child(10) {
-        grid-area: j;
-    }
-
-    & > *:nth-child(11) {
-        grid-area: k;
     }
 
     .scenaries_item {
         position: relative;
         border-radius: 16px;
         font-size: 16px;
-
-        &.l {
-            grid-area: l;
-            display: none;
-            overflow: hidden;
+        transition: 0.8s;
+        &.main {
+            opacity: 1;
+        }
+        &.secondary {
+            opacity: 0;
         }
 
         @include common.mediaMaxWidth(768) {
@@ -442,6 +399,7 @@
         }
 
         &.e {
+            grid-area: e;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -457,6 +415,7 @@
             }
         }
         &.g {
+            grid-area: g;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -497,8 +456,12 @@
             background-color: var(--white);
             overflow: hidden;
 
-            svg {
+            img {
                 min-width: 20px;
+            }
+
+            h4 {
+                text-transform: lowercase;
             }
 
             @include common.mediaMaxWidth(768) {
@@ -559,7 +522,8 @@
             }
         }
 
-        &.a {
+        &.s1 {
+            grid-area: s1;
             .label {
                 top: 88px;
                 left: 0;
@@ -595,7 +559,8 @@
                 }
             }
         }
-        &.b {
+        &.s2 {
+            grid-area: s2;
             .label {
                 top: 0px;
                 left: 30%;
@@ -643,7 +608,8 @@
                 }
             }
         }
-        &.c {
+        &.s3 {
+            grid-area: s3;
             .label {
                 top: 50%;
                 left: 30%;
@@ -705,7 +671,8 @@
                 }
             }
         }
-        &.d {
+        &.s4 {
+            grid-area: s4;
             .label {
                 top: 0%;
                 left: 0;
@@ -720,7 +687,8 @@
                 }
             }
         }
-        &.f {
+        &.s6 {
+            grid-area: s6;
             .label {
                 top: 50%;
                 transform: translateY(-50%);
@@ -773,7 +741,8 @@
                 }
             }
         }
-        &.h {
+        &.s8 {
+            grid-area: s8;
             .label {
                 top: 0px;
                 left: 40%;
@@ -830,7 +799,8 @@
 
             }
         }
-        &.i {
+        &.s9 {
+            grid-area: s9;
             .label {
                 top: 50%;
                 left: 30%;
@@ -886,7 +856,8 @@
                 }
             }
         }
-        &.j {
+        &.s10 {
+            grid-area: s10;
             .label {
                 top: 0px;
                 left: 20%;
@@ -937,7 +908,8 @@
                 }
             }
         }
-        &.k {
+        &.s11 {
+            grid-area: s11;
             .label {
                 top: 0px;
                 left: 40%;
@@ -999,15 +971,15 @@
         grid-template-columns: 1fr;
         grid-template-areas: 
             'e'
-            'a'
-            'b'
-            'c'
-            'f'
-            'd'
-            'h'
+            's1'
+            's2'
+            's3'
+            's6'
+            's4'
+            's8'
             'i'
             'j'
-            'k'
+            'm'
             'g'
         ;
         grid-auto-rows: auto;
